Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26621

Expected default volume of QMediaPlayer instance incorrect.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.1
    • 5.0.0 Beta 1
    • Multimedia
    • None
    • Windows 7
    • d8426bbf71d30f69b506a5e0148cafc05c79bae9

    Description

      To replicate this issue please run the QMediaPlayerBackend integration test cases located in (qt5\qtmultimedia\tests\auto\integration).

      One of the test cases fails when reading the volume of a default initialized QMediaPlayer instance. The volume that is read is 1 when it is expected to be 100%.

      The error message is as follows:
      FAIL! : tst_QMediaPlayerBackend::initialVolume() Compared values are not the same
      Actual (player.volume()): 1
      Expected (100): 100
      .\tst_qmediaplayerbackend.cpp(606) : failure location

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            manandar Myilone Anandarajah (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes